k8s/httpserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpserver
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
      labels:
        app: httpserver
    spec:
      containers:
        - name: httpserver
          image: /YOUR_REPO/IMAGE:TAG
          ports:
            - containerPort: 8080
          lifecycle:
            postStart:
              exec:
                command: ['/bin/sh', '-c', 'echo httpserver started!']
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 30Mi
            limits:
              cpu: 100m
              memory: 50Mi
          volumeMounts:
            - name: log-volume
              mountPath: /logs
      volumes:
        - name: log-volume
          emptyDir:
            sizeLimit: 20Mi

---
apiVersion: v1
kind: Service
metadata:
  name: httpserver-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: httpserver
